--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "compressorjs": "^1.2.1",
     "file-saver": "^2.0.5",
     "gh-pages": "^6.1.0",
+    "jszip": "^3.10.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
